--- a/public/elements/sps-app.html
+++ b/public/elements/sps-app.html
@@ -49,7 +49,8 @@ Example:
   <link rel="import" href="../bower_components/paper-datatable/paper-datatable.html">
   <link rel="import" href="sps-login.html">
   <link rel="import" href="sps-page-presentations.html">
-
+  
+  <style include="iron-flex"></style>
   <template>
     <style>
       :host {
