--- a/public/elements/sps-page-viewers.html
+++ b/public/elements/sps-page-viewers.html
@@ -116,7 +116,7 @@
         this.$.presDeleteDialog.open();
       },
       _onViewersAjaxResp: function(e) {
-        this.$.dt.reload();
+        //this.$.dt.reload();
       },
       _selectionChanged: function(e) {
         if(e.detail.selected) {
